fix - style and overflow copy index card

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -128,13 +128,6 @@
   padding-right: 10px;
 }
 
-.card-index-subtitle-left-2-list {
-  grid-row-start: 4;
-  grid-row-end: 6;
-  grid-column-start: 1;
-  padding-right: 10px;
-}
-
 .card-index-content-title-left {
   grid-row-start: 2;
   font-weight: bolder;
